fix header spacing

--- a/src/assets/styles/components/CarouselHeader.scss
+++ b/src/assets/styles/components/CarouselHeader.scss
@@ -1,7 +1,7 @@
 .fixTop {
   margin-left: 12.5%;
   margin-right: 12.5%; 
-  margin-top: 150px;
+  margin-top: 120px;
   .carousel-indicators {
         right: 80%;
         // left: 0;
